added new files & input html

--- a/index.html
+++ b/index.html
@@ -7,21 +7,36 @@
 <title>
 senseBox Dashboard
 </title>
-<body background="Platine.jpg">
+
+
 <link rel="stylesheet" type="text/css" href="style.css" />
+<body style="background: url(Platine.jpg); background-attachment:fixed;">
 
 </head>
 
 <body>
 
+<a href="index_EN.html"><img src="EN.png" alt="EN" width="100" height="60" class="ENimg" /></a>
+<a href="index.html"><img src="DE.png" alt="DE" width="100" height="60" class="DEimg" /></a>
+
 <div class="box">
 
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="outside">Draußen</p>
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="sensebox">senseBox</p>
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="corridor">Flur</p>
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="bed">Schlafzimmer</p>
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="living">Wohnzimmer</p>
-<p style="font-size:50px; font-family:Montserrat, sans-serif;" class="livingliving">Wohnzimmer (Wohn)</p>
+
+
+<p style="font-size:60px; font-family:Montserrat, sans-serif;" class="title"><b>senseBox: </b></p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="temperature">Temperatur: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="humidity">Luftfeuchtigkeit: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="airpressure">Luftdruck: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="illuminance">Beleuchtungstärke: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="uv">UV(A)-Intensität: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="noise">Lautstärke: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="distance">Distanz: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="wifi">WLAN-Signalstärke: </p>
+<p style="font-size:40px; font-family:Montserrat, sans-serif;" class="voltage">Eingangsspannung: </p>
+
+
+
+
 </div>
 
 
