--- a/input.html
+++ b/input.html
@@ -10,8 +10,7 @@ senseBox Dashboard
 </title>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
-<script src="func.js">
-</script>
+
 
 </head>
 
@@ -22,15 +21,14 @@ senseBox Dashboard
 
 
 <form>
-<input type="text" name="senseID" class="inputbox" style="font-size:40px; font-weight: bold; text-align: center; font-family:Montserrat, sans-serif; width: 650px; margin-left: auto; margin-right: auto;" maxlength="24">
-<button type="button" name="sendSenseID" class="inputbutton" style="font-family:Montserrat, sans-serif; font-size:23px; height: 30px; width: 300px"><b>senseBox ID best&auml;tigen</b></button>
+<input type="text" name="senseID" class="inputbox" id="senseID" style="font-size:40px; font-weight: bold; text-align: center; font-family:Montserrat, sans-serif; width: 650px; margin-left: auto; margin-right: auto;" maxlength="24">
+<button type="button" name="sendSenseID" id="sendSenseID" class="inputbutton" style="font-family:Montserrat, sans-serif; font-size:23px; height: 30px; width: 300px"><b>senseBox ID best&auml;tigen</b></button>
 </form>
 
 
 
-
-
-
+<script src="func.js">
+</script>
 
 </body>
 
