--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 senseBox Dashboard
 </title>
 
+<script src="func.js">
+</script>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <body style="background: url(Platine.jpg); background-attachment:fixed;">
@@ -33,7 +35,6 @@ senseBox Dashboard
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="distance">Distanz: </p>
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="wifi">WLAN-Signalstärke: </p>
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="voltage">Eingangsspannung: </p>
-
 
 
 
