--- a/index_EN.html
+++ b/index_EN.html
@@ -8,6 +8,8 @@
 senseBox Dashboard
 </title>
 
+<script src="func.js">
+</script>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <body style="background: url(Platine.jpg); background-attachment:fixed;">
