--- a/input.html
+++ b/input.html
@@ -9,6 +9,8 @@ senseBox Dashboard
 
 </title>
 
+
+
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 
@@ -20,15 +22,12 @@ senseBox Dashboard
 <a href="input.html"><img src="DE.png" alt="DE" width="100" height="60" class="DEimg" /></a>
 
 
-<form>
+<form method="GET" action="index.html">
 <input type="text" name="senseID" class="inputbox" id="senseID" style="font-size:40px; font-weight: bold; text-align: center; font-family:Montserrat, sans-serif; width: 650px; margin-left: auto; margin-right: auto;" maxlength="24">
-<button type="button" name="sendSenseID" id="sendSenseID" class="inputbutton" style="font-family:Montserrat, sans-serif; font-size:23px; height: 30px; width: 300px"><b>senseBox ID best&auml;tigen</b></button>
+<button type="button" name="sendSenseID" id="sendSenseID" class="inputbutton" style="font-family:Montserrat, sans-serif; font-size:23px; height: 30px; width: 300px" method="GET" action="index.html"><b>senseBox ID best&auml;tigen</b></button>
 </form>
 
 
-
-<script src="func.js">
-</script>
 
 </body>
 
