--- a/input_EN.html
+++ b/input_EN.html
@@ -9,6 +9,8 @@ senseBox Dashboard
 
 </title>
 
+
+
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 
@@ -16,20 +18,16 @@ senseBox Dashboard
 
 <body style="background: url(Platine.jpg); background-attachment:fixed;">
 
-<a href="input_en.html"><img src="EN.png" alt="EN" width="100" height="60" class="ENimg" /></a>
+<a href="input_EN.html"><img src="EN.png" alt="EN" width="100" height="60" class="ENimg" /></a>
 <a href="input.html"><img src="DE.png" alt="DE" width="100" height="60" class="DEimg" /></a>
 
 
-<form>
+<form method="GET" action="index_EN.html">
 <input type="text" name="senseID" class="inputbox" id="senseID" style="font-size:40px; font-weight: bold; text-align: center; font-family:Montserrat, sans-serif; width: 650px; margin-left: auto; margin-right: auto;" maxlength="24">
 <button type="button" name="sendSenseID" id="sendSenseID" class="inputbutton" style="font-family:Montserrat, sans-serif; font-size:23px; height: 30px; width: 300px"><b>confirm senseBox ID</b></button>
 </form>
 
 
-
-
-<script src="func.js">
-</script>
 
 </body>
 
