Added function to load api

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 senseBox Dashboard
 </title>
 
-<script src="func.js">
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.de-DE,fetch">
 </script>
+
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <body style="background: url(Platine.jpg); background-attachment:fixed;">
+
+
 
 </head>
 
@@ -26,20 +29,51 @@ senseBox Dashboard
 
 
 <p style="font-size:60px; font-family:Montserrat, sans-serif;" class="title"><b>senseBox: </b></p>
+<span data-default="" class="titlesp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="temperature">Temperatur: </p>
+<span data-default="" class="temperaturesp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="humidity">Luftfeuchtigkeit: </p>
+<span data-default="" class="humiditysp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="airpressure">Luftdruck: </p>
+<span data-default="" class="airpressuresp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="illuminance">Beleuchtungstärke: </p>
+<span data-default="" class="illuminancesp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="uv">UV(A)-Intensität: </p>
+<span data-default="" class="uvsp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="noise">Lautstärke: </p>
+<span data-default="" class="noisesp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="distance">Distanz: </p>
+<span data-default="" class="distancesp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="wifi">WLAN-Signalstärke: </p>
+<span data-default="" class="wifisp">
+</span>
+
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="voltage">Eingangsspannung: </p>
+<span data-default="" class="voltagespw2">
+</span>
 
 
 
 </div>
 
+<script src="func.js">
+</script>
 
 </body>
 
