--- a/index_EN.html
+++ b/index_EN.html
@@ -8,11 +8,14 @@
 senseBox Dashboard
 </title>
 
-<script src="func.js">
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.de-DE,fetch">
 </script>
+
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <body style="background: url(Platine.jpg); background-attachment:fixed;">
+
+
 
 </head>
 
@@ -40,6 +43,8 @@ senseBox Dashboard
 
 </div>
 
+<script src="func.js">
+</script>
 
 </body>
 
