Added readers and 'translators' for the incoming API-data

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ senseBox Dashboard
 
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="temperature">Temperatur: </p>
 <span data-default="" class="temperaturesp">
+<script>
+
+</script>
 </span>
 
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="humidity">Luftfeuchtigkeit: </p>
@@ -65,7 +68,7 @@ senseBox Dashboard
 </span>
 
 <p style="font-size:40px; font-family:Montserrat, sans-serif;" class="voltage">Eingangsspannung: </p>
-<span data-default="" class="voltagespw2">
+<span data-default="" class="voltagesp">
 </span>
 
 
